table styling. first header attempt

--- a/table.html
+++ b/table.html
@@ -16,6 +16,17 @@ body {
 }
 </style>
 
+
+
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+ <header class="mdl-layout__header">
+ <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Welcome to project Tres Leches Mañana.</span>
+   </div>
+   </header>
+   </div>
+   
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
   Button
 </button>
