nicer styling, changed button

--- a/table.html
+++ b/table.html
@@ -12,42 +12,53 @@ body {
   margin-left: 20px;
   margin-right: 20px;
   padding: 20px;
+}
+  
+header {
+    width: 100%;
+    top: 0;
+    position: fixed;
+    left: 0;
+}
 
+span {
+	font-family: 'Josefin Slab', serif;
 }
 </style>
 
 
-
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+ <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
  <header class="mdl-layout__header">
  <div class="mdl-layout__header-row">
-      <!-- Title -->
       <span class="mdl-layout-title">Welcome to project Tres Leches Mañana.</span>
    </div>
    </header>
    </div>
-   
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  Button
-</button>
 
-<form>
-<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    <input class="mdl-textfield__input" name="type="text" id="sample3">
-    <label class="mdl-textfield__label" for="sample3">Verb...</label>
+	<div class="container">
+	<div class = "content">
+   <p>
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin imperdiet ipsum interdum quam pretium aliquet. Duis faucibus, arcu eu lobortis blandit, felis urna finibus libero, sit amet venenatis sapien nisi non ipsum. Vestibulum suscipit tincidunt condimentum. Etiam aliquam porta arcu, a maximus ipsum vehicula efficitur. Sed placerat quam et urna pharetra venenatis. Donec blandit, nibh ultricies varius aliquam, lorem metus efficitur leo, eu fermentum lectus arcu eget ligula. Sed quis nibh et nibh dapibus consequat. Maecenas vitae elit velit. Mauris id ligula efficitur, molestie ligula ac, sagittis diam.
+
+Aliquam pretium a arcu ac facilisis. Mauris sapien leo, semper quis facilisis ac, dignissim non massa. Phasellus volutpat gravida nibh in suscipit. Sed volutpat, dolor id eleifend fermentum, nunc justo pellentesque est, quis finibus elit augue sit amet nibh. Vestibulum a orci tempus libero consectetur feugiat nec nec mi. Suspendisse venenatis eros ut ultricies sagittis. Nunc auctor sagittis ligula et lobortis. Integer posuere iaculis turpis, quis ullamcorper urna venenatis a. Phasellus pharetra purus tellus, eu porttitor odio aliquet ut. Donec varius accumsan sollicitudin. Aliquam et faucibus sem, id pretium velit. Morbi et fringilla metus, id ultricies sapien. Vestibulum ullamcorper libero vel justo luctus tempor.
+
+Proin tincidunt ex tellus, id gravida metus pharetra at. Pellentesque ut bibendum enim, sed vulputate elit. Curabitur in nisi ullamcorper, dictum leo quis, finibus tellus. Duis arcu neque, pretium semper tincidunt ut, viverra nec est. Quisque convallis in felis non aliquam. Vestibulum nec pellentesque nunc, vitae viverra enim. Morbi sed sapien accumsan, suscipit nunc ultrices, vulputate nulla. Aliquam erat volutpat. Sed vitae ligula dui. Donec eget gravida purus. Ut finibus elementum diam in pellentesque. Vivamus non leo vitae ligula aliquam interdum. Sed tincidunt at leo vitae elementum. Praesent vitae erat nec eros porttitor pulvinar at sed ligula. Sed sit amet tortor quis est sagittis scelerisque. Donec interdum massa quis enim blandit auctor rhoncus eu purus.
+
+Nulla iaculis dignissim risus, non varius massa volutpat sit amet. Integer maximus nisi libero, eget efficitur dolor ornare posuere. Pellentesque ut suscipit risus. Morbi eleifend felis eget ante vulputate lacinia. Ut nec lorem luctus, lobortis massa id, imperdiet nulla. Aliquam lobortis imperdiet faucibus. Phasellus varius cursus finibus. Phasellus risus ex, varius dapibus purus vel, venenatis rhoncus lorem. Fusce semper porttitor tellus. Maecenas volutpat eros vel tincidunt varius. Cras ut tempus purus.
+
+Vivamus dapibus ultrices est, sed ultrices enim lacinia eget. Nam sit amet lacus rhoncus, interdum turpis laoreet, vulputate urna. Nunc est eros, tempor consectetur mattis sed, posuere a magna. Nulla vel massa et tortor volutpat interdum a id felis. Quisque quis ipsum quis lorem mattis scelerisque ac scelerisque massa. Etiam hendrerit dui id ipsum placerat dapibus. Vivamus pharetra mauris vitae dolor pulvinar, sit amet elementum erat hendrerit. Nullam tincidunt vestibulum convallis. Aliquam congue feugiat dui, ac dictum orci venenatis eget. Etiam eget ipsum sodales, iaculis quam id, pellentesque metus. Phasellus iaculis vitae lorem nec pellentesque. Maecenas vitae ligula odio.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin imperdiet ipsum interdum quam pretium aliquet. Duis faucibus, arcu eu lobortis blandit, felis urna finibus libero, sit amet venenatis sapien nisi non ipsum. Vestibulum suscipit tincidunt condimentum. Etiam aliquam porta arcu, a maximus ipsum vehicula efficitur. Sed placerat quam et urna pharetra venenatis. Donec blandit, nibh ultricies varius aliquam, lorem metus efficitur leo, eu fermentum lectus arcu eget ligula. Sed quis nibh et nibh dapibus consequat. Maecenas vitae elit velit. Mauris id ligula efficitur, molestie ligula ac, sagittis diam.
+
+Aliquam pretium a arcu ac facilisis. Mauris sapien leo, semper quis facilisis ac, dignissim non massa. Phasellus volutpat gravida nibh in suscipit. Sed volutpat, dolor id eleifend fermentum, nunc justo pellentesque est, quis finibus elit augue sit amet nibh. Vestibulum a orci tempus libero consectetur feugiat nec nec mi. Suspendisse venenatis eros ut ultricies sagittis. Nunc auctor sagittis ligula et lobortis. Integer posuere iaculis turpis, quis ullamcorper urna venenatis a. Phasellus pharetra purus tellus, eu porttitor odio aliquet ut. Donec varius accumsan sollicitudin. Aliquam et faucibus sem, id pretium velit. Morbi et fringilla metus, id ultricies sapien. Vestibulum ullamcorper libero vel justo luctus tempor.
+
+Proin tincidunt ex tellus, id gravida metus pharetra at. Pellentesque ut bibendum enim, sed vulputate elit. Curabitur in nisi ullamcorper, dictum leo quis, finibus tellus. Duis arcu neque, pretium semper tincidunt ut, viverra nec est. Quisque convallis in felis non aliquam. Vestibulum nec pellentesque nunc, vitae viverra enim. Morbi sed sapien accumsan, suscipit nunc ultrices, vulputate nulla. Aliquam erat volutpat. Sed vitae ligula dui. Donec eget gravida purus. Ut finibus elementum diam in pellentesque. Vivamus non leo vitae ligula aliquam interdum. Sed tincidunt at leo vitae elementum. Praesent vitae erat nec eros porttitor pulvinar at sed ligula. Sed sit amet tortor quis est sagittis scelerisque. Donec interdum massa quis enim blandit auctor rhoncus eu purus.
+
+Nulla iaculis dignissim risus, non varius massa volutpat sit amet. Integer maximus nisi libero, eget efficitur dolor ornare posuere. Pellentesque ut suscipit risus. Morbi eleifend felis eget ante vulputate lacinia. Ut nec lorem luctus, lobortis massa id, imperdiet nulla. Aliquam lobortis imperdiet faucibus. Phasellus varius cursus finibus. Phasellus risus ex, varius dapibus purus vel, venenatis rhoncus lorem. Fusce semper porttitor tellus. Maecenas volutpat eros vel tincidunt varius. Cras ut tempus purus.
+
+Vivamus dapibus ultrices est, sed ultrices enim lacinia eget. Nam sit amet lacus rhoncus, interdum turpis laoreet, vulputate urna. Nunc est eros, tempor consectetur mattis sed, posuere a magna. Nulla vel massa et tortor volutpat interdum a id felis. Quisque quis ipsum quis lorem mattis scelerisque ac scelerisque massa. Etiam hendrerit dui id ipsum placerat dapibus. Vivamus pharetra mauris vitae dolor pulvinar, sit amet elementum erat hendrerit. Nullam tincidunt vestibulum convallis. Aliquam congue feugiat dui, ac dictum orci venenatis eget. Etiam eget ipsum sodales, iaculis quam id, pellentesque metus. Phasellus iaculis vitae lorem nec pellentesque. Maecenas vitae ligula odio.
+   </p>
 </div>
-
-<table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
-<tr>
-<td class="mdl-data-table__cell--non-numeric">one</td>
-<td class="mdl-data-table__cell--non-numeric">two</td>
-</tr>
-<tr>
-<td class="mdl-data-table__cell--non-numeric">three</td>
-<td class="mdl-data-table__cell--non-numeric">four</td>
-</tr>
-</table>
-
+</div>
 </body>
 </html>
 
